# ygg

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  deny.toml
.github/workflows/: ci.yml  security.yml
crates/sexy-tui-rs/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  UPSTREAM-PARITY.md  VENDORED.md
crates/sexy-tui-rs/docs/: rich-rendering.md  ygg-integration.md
crates/sexy-tui-rs/examples/: render_bench.rs  rich_rendering.rs
crates/sexy-tui-rs/src/: autocomplete.rs  capabilities.rs  editor_component.rs  fuzzy.rs  glyphs.rs  keybindings.rs  keys.rs  kill_ring.rs  lib.rs  live.rs  native_modifiers.rs  sanitize.rs  stdin_buffer.rs  style.rs  terminal.rs  terminal_colors.rs  terminal_image.rs  tui.rs  undo_stack.rs  utils.rs  width.rs  word_navigation.rs
crates/sexy-tui-rs/src/rich_text/: diff.rs  highlight.rs  markdown.rs  mod.rs  render.rs  stream.rs
crates/sexy-tui-rs/src/theme/: capability.rs  config.rs  mod.rs  palette.rs  tokens.rs
crates/sexy-tui-rs/src/widgets/: cancellable_loader.rs  editor.rs  image.rs  input.rs  loader.rs  markdown.rs  mod.rs  panel.rs  select_list.rs  settings_list.rs  spacer.rs  text.rs  truncated_text.rs
crates/sexy-tui-rs/tests/: rich_rendering.rs
crates/sexy-tui-rs/tests/fixtures/: rich.md
crates/sexy-tui-rs/tests/goldens/: capability-matrix.txt  width-matrix.txt
crates/ygg-agent/: Cargo.toml  README.md  THIRD_PARTY_NOTICES.md
crates/ygg-agent/src/: agent.rs  cache.rs  compaction.rs  context.rs  events.rs  extension.rs  extension_process.rs  input.rs  lib.rs  sandbox.rs  secure_fs.rs  session.rs  skills.rs  tool.rs
crates/ygg-agent/src/tools/: bash.rs  edit.rs  exec.rs  mod.rs  read.rs  search.rs  write.rs
crates/ygg-agent/tests/: agent_run.rs  live_openai_multimodal.rs
crates/ygg-ai/: Cargo.toml  LICENSE  README.md  build.rs
crates/ygg-ai/models/: SOURCES.md  catalog.json  models-dev-names.json
crates/ygg-ai/src/: auth.rs  catalog.rs  client.rs  error.rs  json_repair.rs  lib.rs  model_metadata.rs  pricing.rs  stream.rs  transform.rs  types.rs  validate.rs
crates/ygg-ai/src/protocol/: anthropic.rs  cross_protocol_tests.rs  mod.rs  openai_chat.rs  openai_responses.rs  sse.rs
crates/ygg-ai/tests/: client_complete.rs  client_stream.rs  coverage_manifest.rs  public_api.rs  smoke.rs
crates/ygg-ai/tests/fixtures/anthropic/: error_event.sse  malformed_tool_json.sse  max_tokens.sse  parallel_tool_calls.sse  pause_turn.sse  premature_eof.sse  redacted_thinking.sse  stop_sequence.sse  text.sse  thinking.sse  thinking_usage.sse  tool_call.sse
crates/ygg-ai/tests/fixtures/openai_chat/: audio_output.json  duplicate_finish_reason.sse  duplicate_finish_tool_calls.sse  length_stop.sse  malformed_tool_json.sse  no_finish_reason.sse  one_tool_call.sse  parallel_tool_calls.sse  plain_text.sse  premature_eof.sse  qwen_xml_tool_call.sse  reasoning.sse  reasoning_alias.sse
crates/ygg-ai/tests/fixtures/openai_responses/: codex_nested_stream_error.sse  completed_no_usage.sse  done_tool_arguments.sse  ignored_event.sse  incomplete_max_tokens.sse  inline_tool_arguments.sse  malformed_tool_json.sse  parallel_tool_calls.sse  plain_text.sse  premature_eof.sse  reasoning_encrypted.sse  reasoning_opaque_no_text.sse  reasoning_summary.sse  response_failed.sse  stream_error.sse  tool_call.sse
crates/ygg-coding-agent/: Cargo.toml  README.md
crates/ygg-coding-agent/src/: cli.rs  commands.rs  compaction.rs  config.rs  extensions.rs  hydrate.rs  instrument.rs  main.rs  presentation.rs  prompts.rs  providers.rs  resource_resolver.rs  resources.rs  session_commands.rs  session_store.rs  session_tree.rs  update.rs
crates/ygg-coding-agent/src/app/: bootstrap.rs  mod.rs
crates/ygg-coding-agent/src/auth/: mod.rs
crates/ygg-coding-agent/src/auth/codex/: login.rs  mod.rs  oauth.rs  resolver.rs  store.rs
crates/ygg-coding-agent/src/auth/custom/: mod.rs  store.rs
crates/ygg-coding-agent/src/modes/: interactive.rs  mod.rs  plain.rs  print.rs
crates/ygg-coding-agent/src/spike/: bin_spike.rs
crates/ygg-coding-agent/src/tui/: composer.rs  composer_surface.rs  context.rs  highlight.rs  keymap.rs  mod.rs  pickers.rs  splash.rs  terminal.rs  theme.rs  theme_pack.rs  theme_schema.rs  view.rs
crates/ygg-coding-agent/tests/: sigterm_shutdown.rs
crates/ygg-coding-agent/themes/: bone-machine.toml  circuit-garden.toml  field-notes.toml  oxide-console.toml  paper-ledger.toml  signal-noir.toml  synthwave-relay.toml  tidepool.toml  violet-hour.toml  zen-mono.toml
deploy/: Dockerfile.ygg  vllm-manager.py
docs/: extensions.md  resources.md  sessions.md  themes.md
docs/design/: ygg-agent.md  ygg-ai.md  ygg-coding-agent.md  ygg-tui.md
docs/plans/: ygg-ai-implementation.md  ygg-ai-implementer-prompt.md  ygg-ai-oauth-codex.md
docs/releases/: v0.1.0-alpha.md  v0.1.1-alpha.md
docs/reports/: ygg-ai-implementation-report.md
docs/research/apidocs/openai-responses/: 10-input-tokens-count.md
docs/research/refImpls/: README.md
docs/research/refImpls/agent/: terminus-2.md
docs/research/refImpls/ai/: pi-ai.md
docs/research/refImpls/coding-agent/: codex-tools.md  pi-coding-agent.md
docs/superpowers/gates/: 2026-07-13-ygg-coding-agent-gate-0.md
docs/superpowers/plans/: 2026-07-12-ygg-coding-agent-slice-1.md  2026-07-12-ygg-coding-agent-v1.md  2026-07-15-multimodal-input.md
docs/superpowers/specs/: 2026-07-12-ygg-coding-agent-design.md  2026-07-13-codex-oauth-design.md  2026-07-15-multimodal-input-design.md
examples/: README.md
examples/extensions/git-tools/: README.md  extension.py  extension.toml
examples/extensions/hello-world/: README.md  extension.py  extension.toml
examples/extensions/local-model-workflow/: README.md  extension.py  extension.toml
examples/prompts/: README.md  grounded-implement.toml  local-review.md
examples/skills/: README.md
examples/skills/local-model-review/: SKILL.md
examples/skills/repro-first/: SKILL.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: session_record.rs
scripts/: install.sh
(+8 files in other folders)
