[workspace]
resolver = "2"
members = [
    "crates/sexy-tui-rs",
    "crates/ygg-ai",
    "crates/ygg-agent",
    "crates/ygg-coding-agent",
]

[workspace.package]
version = "0.1.0-alpha"
edition = "2021"
authors = ["Skaft Software"]
repository = "https://github.com/skaft-software/ygg"
homepage = "https://github.com/skaft-software/ygg"
rust-version = "1.86"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
# Money must be exact integers; no floating-point arithmetic in pricing.
# (Enforced per-module where relevant; kept off the workspace default to avoid
# false positives on legitimate f32 sampling knobs like `temperature`.)

[profile.release]
# The interactive binary is latency- and footprint-sensitive. Thin LTO keeps
# most of the cross-crate wins without the much longer full-LTO link, while a
# single codegen unit gives LLVM a complete view of each crate.
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
