[workspace]
resolver = "2"
members = [
    "crates/sexy-tui-rs",
    "crates/ygg-ai",
    "crates/ygg-agent",
    "crates/ygg-coding-agent",
]

[workspace.package]
version = "0.1.0-alpha"
edition = "2021"
authors = ["Skaft Software"]
repository = "https://github.com/skaft-software/ygg"
homepage = "http://skaft.org/ygg"
rust-version = "1.86"
license = "MIT"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
# Money must be exact integers; no floating-point arithmetic in pricing.
# (Enforced per-module where relevant; kept off the workspace default to avoid
# false positives on legitimate f32 sampling knobs like `temperature`.)

[profile.dev]
# Keep incremental compilation on for fast iteration, but use a low
# codegen-unit count to reduce the number of parallel compilation units
# (each one produces incremental artifacts that accumulate over time).
# Cargo's default is 16 for dev builds; 1 gives the fewest artifacts.
codegen-units = 1

[profile.release]
# The interactive binary is latency- and footprint-sensitive. Thin LTO keeps
# most of the cross-crate wins without the much longer full-LTO link, while a
# single codegen unit gives LLVM a complete view of each crate.
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
