[package]
name = "ygg-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
ygg-agent = { path = "../crates/ygg-agent" }

[[bin]]
name = "session_record"
path = "fuzz_targets/session_record.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
