[package]
name = "ygg-agent"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Stateful agent loop with tool execution and event streaming for Ygg."

[lints]
workspace = true

[dependencies]
ygg-ai = { path = "../ygg-ai" }
bytes = "1"
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "process", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-trait = "0.1"
async-stream = "0.3"
futures-core = "0.3"
futures-util = "0.3"

# One `libc::kill(-pgid, SIGKILL)` call terminates a cancelled exec tool's whole
# process group (tokio's kill_on_drop only reaches the direct child).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util"] }
tempfile = "3"
wiremock = "0.6"
pretty_assertions = "1"
url = "2"
http = "1"
