[package]
name = "ygg-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Stateful agent loop with tool execution and event streaming for Ygg."
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["ai", "agents", "tools", "sessions", "llm"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
ygg-ai = { version = "=0.1.0-alpha", path = "../ygg-ai" }
bytes = "1"
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "process", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
semver = "1"
thiserror = "1"
async-trait = "0.1"
async-stream = "0.3"
schemars = "0.8"
futures-core = "0.3"
futures-util = "0.3"
# Portable advisory file locking with an MSRV below the workspace's 1.86.
fs2 = "0.4"
sha2 = "0.10"

# One `libc::kill(-pgid, SIGKILL)` call terminates a cancelled exec tool's whole
# process group (tokio's kill_on_drop only reaches the direct child).
[target.'cfg(unix)'.dependencies]
libc = "0.2"
rustix = { version = "1", features = ["fs"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util"] }
tempfile = "3"
wiremock = "=0.6.4"
pretty_assertions = "1"
url = "2"
http = "1"
base64 = "0.22"
