[package]
name = "ygg-ai"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Provider-independent inference package for Ygg's agent loop."

[lints]
workspace = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "http2"] }
http = "1"
bytes = { version = "1", features = ["serde"] }
futures-core = "0.3"
futures-util = "0.3"
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1"
url = { version = "2", features = ["serde"] }
base64 = "0.22"
mime = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
wiremock = "0.6"
pretty_assertions = "1"
