[package]
name = "ygg-ai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Provider-independent inference package for Ygg's agent loop."
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "http2"] }
http = "1"
bytes = { version = "1", features = ["serde"] }
futures-core = "0.3"
futures-util = "0.3"
async-stream = "0.3"
tokio = { version = "1", features = ["time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1"
url = { version = "2", features = ["serde"] }
base64 = "0.22"
mime = "0.3"
zstd = "0.13"

[build-dependencies]
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
wiremock = "=0.6.4"
pretty_assertions = "1"
