[package]
name = "ygg-coding-agent"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Full-screen interactive coding agent over ygg-agent."

[lints]
workspace = true

[[bin]]
name = "ygg"
path = "src/main.rs"

[[bin]]
name = "ygg-tui-spike"
path = "src/spike/bin_spike.rs"

[dependencies]
ygg-ai = { path = "../ygg-ai" }
ygg-agent = { path = "../ygg-agent" }
# Pinned to the verified rust-port commit. Developer override:
# [patch.'https://github.com/achuthanmukundan00/sexy-tui-rs']
# sexy-tui-rs = { path = "../../../../achuthanmukundan00/sexy-tui-rs-rust-port" }
sexy-tui-rs = { git = "https://github.com/achuthanmukundan00/sexy-tui-rs", rev = "cc228b0f3b9032d86e16e0a3a7cb3ed1db194b4d" }
tokio = { version = "1", features = ["rt", "macros", "time", "io-util", "process", "sync"] }
crossterm = { version = "0.28", features = ["event-stream", "bracketed-paste"] }
futures-util = "0.3"
tokio-stream = "0.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
anyhow = "1"
url = "2"
http = "1"
unicode-width = "0.2"
regex = "1"
mime = "0.3"
bytes = "1"

# Codex OAuth (Sign in with ChatGPT): hosted device authorization,
# token exchange/refresh, and JWT claim decoding. reqwest is pinned to match
# ygg-ai's rustls-only stack.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
base64 = "0.22"
rand = "0.8"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
wiremock = "0.6"
