[package]
name = "ygg-coding-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Local-first terminal coding agent for local and cloud models."
repository.workspace = true
homepage.workspace = true
readme = "README.md"
default-run = "ygg"
keywords = ["ai", "coding-agent", "terminal", "local-first", "llm"]
categories = ["command-line-utilities", "development-tools"]

[lints]
workspace = true

[[bin]]
name = "ygg"
path = "src/main.rs"

[dependencies]
ygg-ai = { version = "=0.1.0-alpha", path = "../ygg-ai" }
ygg-agent = { version = "=0.1.0-alpha", path = "../ygg-agent" }
# Vendored semantic rich-rendering integration. Keeping it in this workspace
# makes fresh clones build the exact implementation reviewed with Ygg.
sexy-tui-rs = { version = "=0.2.1", path = "../sexy-tui-rs" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-util", "process", "sync"] }
crossterm = { version = "0.28", features = ["event-stream", "bracketed-paste"] }
futures-util = "0.3"
tokio-stream = "0.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "0.8"
toml = "0.8"
dirs = "5"
anyhow = "1"
thiserror = "1"
url = "2"
percent-encoding = "2"
http = "1"
unicode-width = "0.2"
unicode-segmentation = "1.12.0"
mime = "0.3"
bytes = "1"
ignore = "0.4"
# Codex OAuth (Sign in with ChatGPT): hosted device authorization,
# token exchange/refresh, and JWT claim decoding. reqwest is pinned to match
# ygg-ai's rustls-only stack.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking", "stream"] }
base64 = "0.22"
regex = "1"
async-trait = "0.1"
tempfile = "3"
signal-hook = "0.3"
sha2 = "0.10"
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"
vt100 = "0.15.2"
wiremock = "=0.6.4"
